@@ -38,12 +38,12 @@ class MessageHandlerTest {
         
         handler.send("hello");
         await().atMost(Duration.ofMillis(1000)).untilAsserted(() ->
-                assertThat(sink.received().get(0).getPayload()).isEqualTo("hello")
+                assertThat(sink.received().getFirst().getPayload()).isEqualTo("hello")
         );
 
         messages.send("hello-123");
         await().atMost(Duration.ofMillis(1000)).untilAsserted(() ->
-                assertThat(dataStream.received().get(0).getPayload().body()).isEqualTo("hello-123")
+                assertThat(dataStream.received().getFirst().getPayload().body()).isEqualTo("hello-123")
         );
     }
 }
